# report_core

./: .cz.toml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml
core_py/: Cargo.toml  pyproject.toml
core_py/examples/: add_book.py  add_sheet.py  apply_helper_class.py  apply_helper_dict.py  book.py  finder.py  iter_cells.py  merged_cells.py  service.py
core_py/python/report_core/: __init__.py  _report_core.pyi
core_py/python/report_core/readable/: __init__.py  _readable.pyi
core_py/src/: funcs.rs  helper.rs  lib.rs  services.rs  structs.rs  utils.rs
core_py/src/reader/: cell.rs  sheet.rs
core_py/src/structs/: book.rs  cell.rs  comment.rs  readable.rs  service.rs  sheet.rs
core_py/src/structs/readable/: cell.rs  finder.rs  sheet.rs
core_py/src/writer/: book.rs  cell.rs  sheet.rs
core_pyo3/: Cargo.toml  pyproject.toml
core_pyo3/examples/: finder.py  service.py
core_pyo3/python/report_core/: _report_core.pyi
core_pyo3/python/report_core/readable/: __init__.py
core_pyo3/src/: funcs.rs  lib.rs  macros.rs
core_pyo3/src/structs/: book.rs  cell.rs  comment.rs  readable.rs  service.rs  sheet.rs
core_pyo3/src/structs/readable/: cell.rs  finder.rs  sheet.rs
core_rs/: Cargo.toml
core_rs/examples/: add_book.rs  add_sheet.rs  delete_cells.rs  find_cells.rs  merged_cells.rs
core_rs/src/: datatype.rs  funcs.rs  helper.rs  lib.rs  structs.rs  traits.rs  utils.rs  writer.rs
core_rs/src/reader/: cell.rs  sheet.rs
core_rs/src/structs/: book.rs  cell.rs  cells.rs  column.rs  columns.rs  comment.rs  coordinate.rs  finder.rs  merge_cells.rs  range.rs  row.rs  rows.rs  service.rs  sheet.rs  style.rs
core_rs/src/writer/: book.rs  cell.rs  sheet.rs
crates/core_rs/: Cargo.toml
crates/core_rs/src/: datatype.rs  funcs.rs  structs.rs
crates/core_rs/src/structs/: book.rs  cell.rs  cells.rs  column.rs  columns.rs  comment.rs  finder.rs  range.rs  row.rs  rows.rs  service.rs  sheet.rs
