[workspace]
resolver = "3"
members = ["crates/core_rs", "core_pyo3"]


[workspace.package]
description = "Вспомогательное ядро для построения отчетов на основе XLSX."
version = "0.12.3"
edition = "2024"

rust-version = "1.92"

authors = ["Alexandr Starovoitov <stalex.info@yandex.ru>"]

readme = "README.md"
homepage = "https://github.com/stalexsm/report_core.git"
repository = "https://github.com/stalexsm/report_core.git"

[workspace.dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", features = ["serde"] }
fancy-regex = "0.17.0"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
rayon = "1.10.0"
parking_lot = { version = "0.12.3", features = ["serde"] }
lazy_static = "1.5.0"
ahash = { version = "0.8.12", features = ["serde"] }

pyo3-build-config = "0.27.2"
pyo3 = { version = "0.27.2", features = [
    "anyhow",
    # "auto-initialize",
    "chrono",
    "extension-module",
    "generate-import-lib",
    "py-clone",
    "serde",

] }



[profile.release]
lto = "fat"
codegen-units = 1
strip = true


[workspace.metadata.release]
tag-name = "{{version}}"
