[package]
name = "core_py"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "report_core"
crate-type = ["cdylib"]

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]

[dependencies]
core_rs = { path = "../core_rs" }

pyo3.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true


[build-dependencies]
pyo3-build-config = "0.23.1"
