[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "report_core"
description = "Вспомогательное ядро для построения отчетов на базе XLSX"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "readme"]
authors = [
    { email = "stalex.info@yandex.ru" },
    { name = "Alexander Starovoytov" },
]

[tool.maturin]
features = ["pyo3/extension-module"]

python-source = "python"
module-name = "report_core._report_core"
bindings = "pyo3"
strip = true
