[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "report_core"
description = "Вспомогательное ядро для построения отчетов на базе XLSX"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "readme"]
authors = [
    { email = "stalex.info@yandex.ru" },
    { name = "Alexander Starovoytov" },
]

[tool.maturin]
features = ["pyo3/extension-module"]

python-source = "python"
module-name = "report_core._report_core"
bindings = "pyo3"
strip = true


[project.urls]
homepage = "https://github.com/stalexsm/report_core"
repository = "https://github.com/stalexsm/report_core"
