[package]
name = "core_rs"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]

parking_lot.workspace = true
rayon.workspace = true
anyhow.workspace = true
chrono.workspace = true
fancy-regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
lazy_static.workspace = true
