[package]
name = "core_rs"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parking_lot.workspace = true
rayon.workspace = true
anyhow.workspace = true
chrono.workspace = true
fancy-regex.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
ahash.workspace = true
